--- a/ninth.html
+++ b/ninth.html
@@ -4,7 +4,7 @@
     <script>
 // Get the canvas element
 const canvas = document.getElementById('canvas');
-const gl = canvas.getContext('webgl') || canvas.getContext("experimental-webgl");
+const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
 
 // Define the vertices of the cube
 const vertices = new Float32Array([
