--- a/ninth.html
+++ b/ninth.html
@@ -4,6 +4,8 @@
     <script>
 // Get the canvas element
 const canvas = document.getElementById('canvas');
+canvas.width=750;
+canvas.height=750;
 const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
 
 // Define the vertices of the cube
