--- a/ten.html
+++ b/ten.html
@@ -4,9 +4,10 @@
       <script>
         class Cell
         {
-          constructor(id) 
+          constructor(x,y) 
           {
-            this.id = id;
+            this.x = x;
+            this.y = y;
             this.up = false;
             this.down = false;
             this.left = false;
