--- a/ten.html
+++ b/ten.html
@@ -16,8 +16,8 @@
           
           draw(ctx)
           {
-            c.fillStyle=`rgb(,0,${i*5})`;
-            c.fillRect(s*i,s*j,s,s);
+            ctx.fillStyle=`rgb(255,0,255)`;
+            ctx.fillRect(s*i,s*j,s,s);
           }
             
         }
