--- a/ten.html
+++ b/ten.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <body style="background-color: #000000;">
     <canvas id="theCanvas"></canvas>
       <script>
         const l = 10;
