--- a/ten.html
+++ b/ten.html
@@ -26,7 +26,7 @@
         can.height=750;
         var c=can.getContext("2d");
         
-        Cell MyCell(6,4);
+        let MyCell = new Cell(6,4);
         MyCell.draw(c);
         
       </script>
