--- a/ten.html
+++ b/ten.html
@@ -18,7 +18,7 @@
           draw(ctx)
           {
             ctx.fillStyle=`rgb(255,0,255)`;
-            ctx.fillRect(x*l,y*l,l,l);
+            ctx.fillRect(this.x*l,this.y*l,l,l);
           }
         }
         var can=document.getElementById("theCanvas");
