--- a/ten.html
+++ b/ten.html
@@ -28,6 +28,8 @@
         
         const MyCell = new Cell(6,4);
         MyCell.draw(c);
+        const AnotherCell = Cell(8,4);
+        AnotherCell.draw(c);
         
       </script>
   </body>     
