--- a/ten.html
+++ b/ten.html
@@ -28,7 +28,7 @@
         
         const MyCell = new Cell(6,4);
         MyCell.draw(c);
-        const AnotherCell = Cell(8,4);
+        const AnotherCell = new Cell(8,4);
         AnotherCell.draw(c);
         
       </script>
