--- a/ten.html
+++ b/ten.html
@@ -23,6 +23,11 @@
             ctx.fillRect(this.x*l+4*w, this.y*l+4*w,w,w);
             ctx.fillRect(this.x*l, this.y*l+4*w,w,w);
             ctx.fillRect(this.x*l+4*w, this.y*l,w,w);
+            if(!this.up)
+            {
+              ctx.fillRect(this.x*l+w, this.y,3*w,w);
+            }
+              
           }
         }
         var can=document.getElementById("theCanvas");
