--- a/ten.html
+++ b/ten.html
@@ -2,6 +2,15 @@
   <body style="background-color: #000000;">
     <canvas id="theCanvas"></canvas>
       <script>
+        function shuffleArray(array)
+        {
+          for (let i = array.length - 1; i >= 0; i--)
+          {
+            const j = Math.floor(Math.random() * (i + 1));
+            [array[i], array[j]] = [array[j], array[i]];
+          }
+        }
+      
         const l = 10;
         class Cell
         {
@@ -13,6 +22,8 @@
             this.down = false;
             this.left = false;
             this.right = false;
+            this.tries = [1,2,3,4];
+            shuffleArray(this.tries);
           }
           
           draw(ctx)
