--- a/ten.html
+++ b/ten.html
@@ -69,14 +69,14 @@
         can.height=750;
         var c=can.getContext("2d");
         
-        /*const MyCell = new Cell(6,4);
+        const MyCell = new Cell(6,4);
         MyCell.left=true;
         MyCell.right=true;
         MyCell.draw(c);
         const AnotherCell = new Cell(8,4);
         AnotherCell.up = true;
         AnotherCell.down = true;
-        AnotherCell.draw(c);*/
+        AnotherCell.draw(c);
 
         maze[0].draw(c);
         maze[1].draw(c);
