--- a/ten.html
+++ b/ten.html
@@ -55,14 +55,14 @@
               
           }
         }
-        /*var maze;
+        var maze;
         for (let y=0; y < rows; y++)
         {
           for (let x=0; x < columns; x++)
           {
             maze.push(new Cell(x,y));
           }
-        }*/
+        }
           
         var can=document.getElementById("theCanvas");
         can.width=750;
