--- a/ten.html
+++ b/ten.html
@@ -55,7 +55,7 @@
               
           }
         }
-        var maze;
+        var maze = [];
         for (let y=0; y < rows; y++)
         {
           for (let x=0; x < columns; x++)
