--- a/ten.html
+++ b/ten.html
@@ -56,13 +56,13 @@
           }
         }
         var maze = [];
-        for (let y=0; y < rows; y++)
+        /*for (let y=0; y < rows; y++)
         {
           for (let x=0; x < columns; x++)
           {
             maze.push(new Cell(x,y));
           }
-        }
+        }*/
           
         var can=document.getElementById("theCanvas");
         can.width=750;
