--- a/ten.html
+++ b/ten.html
@@ -3,7 +3,7 @@
     <canvas id="theCanvas"></canvas>
       <script>
         const rows = 11;
-        const cols = 15;
+        const columns = 15;
         /*function shuffleArray(array)
         {
           for (let i = array.length - 1; i >= 0; i--)
