--- a/ten.html
+++ b/ten.html
@@ -60,7 +60,7 @@
         {
           for (let x=0; x < columns; x++)
           {
-            //maze.push(new Cell(x,y));
+            maze.push(new Cell(x,y));
           }
         }
           
