--- a/ten.html
+++ b/ten.html
@@ -78,8 +78,8 @@
         AnotherCell.down = true;
         AnotherCell.draw(c);
 
-        //maze[0].draw(c);
-        //maze[1].draw(c);
+        maze[0].draw(c);
+        maze[1].draw(c);
         //maze.forEach((element)=>element.draw(c));
         
       </script>
