--- a/ten.html
+++ b/ten.html
@@ -78,9 +78,9 @@
         AnotherCell.down = true;
         AnotherCell.draw(c);
 
-        maze[0].draw(c);
-        maze[1].draw(c);
-        //maze.forEach((element)=>element.draw(c));
+        //maze[0].draw(c);
+        //maze[1].draw(c);
+        maze.forEach((element)=>element.draw(c));
         
       </script>
   </body>     
