--- a/ten.html
+++ b/ten.html
@@ -66,7 +66,7 @@
         
         function getCell(x,y)
         {
-          return maze[y*rows+x];
+          return maze[y*columns+x];
         }
           
         var can=document.getElementById("theCanvas");
