--- a/ten.html
+++ b/ten.html
@@ -24,6 +24,7 @@
             this.down = false;
             this.left = false;
             this.right = false;
+            this.full = false;
             //this.tries = [1,2,3,4];
             //shuffleArray(this.tries);
           }
@@ -85,6 +86,8 @@
 
         //maze[0].draw(c);
         //maze[1].draw(c);
+
+        let start=getCell(rows/2,0);
 
         /*while()
         {
