--- a/ten.html
+++ b/ten.html
@@ -25,7 +25,7 @@
             this.left = false;
             this.right = false;
             this.full = false;
-            //this.tries = [1,2,3,4];
+            this.tries = [1,2,3,4];
             //shuffleArray(this.tries);
           }
           
