--- a/ten.html
+++ b/ten.html
@@ -4,14 +4,14 @@
       <script>
         const rows = 12;
         const columns = 15;
-        /*function shuffleArray(array)
+        function shuffleArray(array)
         {
           for (let i = array.length - 1; i >= 0; i--)
           {
             const j = Math.floor(Math.random() * (i + 1));
             [array[i], array[j]] = [array[j], array[i]];
           }
-        }*/
+        }
       
         const l = 10;
         class Cell
