--- a/ten.html
+++ b/ten.html
@@ -26,7 +26,7 @@
             this.right = false;
             this.full = false;
             this.tries = [1,2,3,4];
-            //shuffleArray(this.tries);
+            shuffleArray(this.tries);
           }
           
           draw(ctx)
