--- a/ten.html
+++ b/ten.html
@@ -87,7 +87,7 @@
         //maze[0].draw(c);
         //maze[1].draw(c);
 
-        let start=getCell(rows/2,0);
+        let start=getCell(0,rows/2);
         start.full = true;
         let d = start.tries.pop();
         if(d==4)
