--- a/ten.html
+++ b/ten.html
@@ -92,7 +92,7 @@
         let d = start.tries.pop();
         if(d==4)
         {
-          start.tries.pop();
+          d=start.tries.pop();
         }
         if(d==1)
         {
