--- a/ten.html
+++ b/ten.html
@@ -88,6 +88,7 @@
         //maze[1].draw(c);
 
         let start=getCell(0,rows/2);
+        start.left = true;
         start.full = true;
         let d = start.tries.pop();
         if(d==4)
