--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <a href="sixth.html">Page 4</a>
   <br>
     <a href="seventh.html">Page 5</a>
+  <br>
+    <a href="alphabet.html">Alphabet</a>
     </p>
   </body>
 </html>
