--- a/alphabet.html
+++ b/alphabet.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <body style="background-color: #000000;">
     <h1 id="letterDisplay">Click the button!</h1>
     <button id="generateButton">Ameliana</button>
 
