--- a/alphabet.html
+++ b/alphabet.html
@@ -6,7 +6,7 @@
     <title>Random Letter Generator</title>
 	<style>
         #letterDisplay {
-            color: blue;
+            color: pink;
             font-size: 48px; /* Adjust size as needed */
         }
     </style>
