--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="seventh.html">Page 5</a>
   <br>
     <a href="alphabet.html">Alphabet</a>
+  <br>
+    <a href="millie.html">Millie!</a>
     </p>
   </body>
 </html>
